<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView_Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_btn_registro"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Registro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_DatosPersonales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_view_datos_personales"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <EditText
                android:id="@+id/editText_Nombre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_Apellido"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_apellido"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/editText_RUT"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_rut"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:met_mask="##.###.###-#">
            </com.santalu.maskedittext.MaskEditText>

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sexo"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton_OpcF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_opcF" />

                    <RadioButton
                        android:id="@+id/radioButton_OpcM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_opcM" />

                    <RadioButton
                        android:id="@+id/radioButton_OpcO"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_opcO" />
                </RadioGroup>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <TextView
                android:id="@+id/textView_DatosCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_view_datos_cuenta"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <EditText
                android:id="@+id/editText_usuario"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_usuario"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_Registrar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="99dp"
                android:background="@color/colorPrimary"
                android:onClick="RegistrarUsuario"
                android:text="@string/txt_btn_Registrar"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>