<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="110dp"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_Home"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imagebutton_Description"
        android:onClick="irAHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_home" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageview_Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/perfil" />

    <TextView
        android:id="@+id/textView_PerfilTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_perfil"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/editText_editNombre"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/txt_nombre"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/editText_editApellido"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/txt_apellido"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/editText_editFNacimiento"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/txt_fNacimiento"
                    android:inputType="text"
                    android:textSize="18sp"
                    app:met_mask="##/##/####"></com.santalu.maskedittext.MaskEditText>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp">

                <EditText
                    android:id="@+id/editText_editEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_mail"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editText_editNomUsuario"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/txt_usuario"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editText_editPass"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword" />
            </TableRow>

            <EditText
                android:id="@+id/editText_editDescripcion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txt_descUsuario"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button_Guardar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:background="@color/colorPrimary"
                android:onClick="guardarDatos"
                android:text="@string/btn_Guardar"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>