<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Planificador">

    <TextView
        android:id="@+id/textView_PlanificadorTitle"
        android:layout_width="182dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_planificador"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_Planificador"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider10"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="110dp"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_Home"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imagebutton_Description"
        android:onClick="irAHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_home" />

    <ImageView
        android:id="@+id/imageView_Planificador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageview_Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_planificador" />

    <Button
        android:id="@+id/button_AgendarEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:background="@color/colorPrimary"
        android:onClick="agregarEvento"
        android:text="@string/btn_agendar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider10" />

    <Button
        android:id="@+id/button_verEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="verEventos"
        android:text="@string/btn_verEventos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_AgendarEvento"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView_TituloConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/txt_hacer"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>