<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TribunalMerito">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_nomTM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt_nomTM"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_InfoTM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/txt_descTM"
                android:textAlignment="textStart"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_docTipoTM"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:onClick="DocTribunal"
                android:text="@string/btn_Documento_Tipo"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider12"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="104dp"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ArticuloTM"
        android:layout_width="167dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_tribunal_merito"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_Sanciones"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Sanciones"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageview_Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/sanciones" />

    <ImageButton
        android:id="@+id/imageButton_Home"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/imagebutton_Description"
        android:onClick="irAHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_home" />
</androidx.constraintlayout.widget.ConstraintLayout>